--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+Version: 1.2.4
+Date: 01. 03. 2023
+  Balancing:
+    - Increased mining radius of advanced burner mining drill to make building new mining setups easier.  This may break existing mining setups if you have mixed ores.
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.3
 Date: 18. 12. 2020
