--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.1
+Date: 14. 03. 2023
+---------------------------------------------------------------------------------------------------
 Version: 1.3.0
 Date: 11. 03. 2023
   Graphics:
