--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.1
 Date: 14. 03. 2023
+  Changes:
+    - Military Supply: Changed how starter packages are implemented.  I don't expect anyone to care about this.
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.0
 Date: 11. 03. 2023
