--- a/changelog.txt
+++ b/changelog.txt
@@ -1,14 +1,13 @@
 ---------------------------------------------------------------------------------------------------
-Version: 1.3.1
-Date: 14. 03. 2023
+Version: 1.4.0
+Date: 26. 09. 2023
   Minor Features:
     - Military Supply: Added 2 new starter packages, one of which creates an optional additional challenge.
     - Military Supply: Added compatibility with the mod Torches by Klonan.
   Changes:
     - Lab research speed technologies now use the vanilla lab's icon instead of the burner lab icon.
     - Lab research speed 2 technology now has Logistic science pack technology as a prerequisite.
-    - Military Supply: Changed how starter packages are implemented.  I don't expect anyone to care about this.
-    - Military Supply: Changed how the supply dropoff chest is implemented.  Again, you probably won't care.
+    - Military Supply: Refactored a bunch of code.  I don't expect anyone other than myself to care about this.
     - Military Supply: Made the map generally much prettier.
     - Military Supply: Added an upgrade for refined concrete.
     - Military Supply: Changed the prerequisites of the normal concrete upgrade.
