--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,7 @@ Date: 26. 09. 2023
   Changes:
     - Lab research speed technologies now use the vanilla lab's icon instead of the burner lab icon.
     - Lab research speed 2 technology now has Logistic science pack technology as a prerequisite.
+    - Military Supply is now a singleplayer-only scenario.
     - Military Supply: Refactored a bunch of code.  I don't expect anyone other than myself to care about this.
     - Military Supply: Made the map generally much prettier.
     - Military Supply: Added an upgrade for refined concrete.
